Fixing whitespace between sections

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {background-color:#f8f8f8;color:#606060;font-family:'Open Sans','Segoe UI',
 
 h1,h2,h3,h4,h5,h6 {font-weight:normal;margin:0px;padding:0px}
 
-header {display:block;margin:0 auto;max-width:1200px;background-color:#0080c0;color:#ffffff;
+header {display:inline-block;margin:0 auto;max-width:1200px;background-color:#0080c0;color:#ffffff;
         background-image:url('../gfx/unsplash-coding-bg.png');background-position:center;background-size:cover}
 .headerContent {padding:20px;text-shadow:#000000 0px 2px 10px}
 .headerNavigation {background-color:rgba(0,0,0,0.5)}
@@ -22,9 +22,9 @@ nav ul li a {padding:20px;display:inline-block}
 #hamburger-checkbox {display:none}
 #hamburger-checkbox:checked ~ nav {display:block}
 
-main {display:block;margin:0 auto;max-width:1200px;background-color:#ffffff;border-bottom:1px solid #e0e0e0;padding:20px;box-sizing:border-box}
+main {display:inline-block;margin:0 auto;max-width:1200px;background-color:#ffffff;border-bottom:1px solid #e0e0e0;padding:20px;box-sizing:border-box}
 
-footer {display:block;margin:0 auto;max-width:1200px;padding:20px;box-sizing:border-box}
+footer {display:inline-block;margin:0 auto;max-width:1200px;padding:20px;box-sizing:border-box}
 
 .firstImage {border-radius:5px;max-width:800px}
 
